--- a/demo/hello.htm
+++ b/demo/hello.htm
@@ -9,8 +9,14 @@
 </head>
 
 <body>
-    <h1>incredials</h1>
+    <div class="" container>
+        <h1 id="headerTitle"> incredials<span style="display:none">123</span></h1>
+        <span>1</span>
+    </div>
+    <h2>item</h2>
     <form>
+        <label>list</label>
+        <input type="text" name="list required" /><br>
         <label>name</label>
         <input type="text" name="username" required /><br>
         <label>email</label>
@@ -18,10 +24,10 @@
         <input type="button" value="submit">
     </form>
     <ol>
-        <li>An item</li>
-        <li>An anther item</li>
+        <li class="list-group-item">item 1</li>
+        <li>item 2</li>
     </ol>
-    <script src="main.js"></script>
+    <script src="first.js"></script>
 </body>
 
 </html>
