--- a/demo/trialfirst.html
+++ b/demo/trialfirst.html
@@ -28,7 +28,7 @@
                 email,
                 phonenumber
             }
-            localStorage.setItem('UserDetails', JSON.stringfy(obj));
+            localStorage.setItem('mailId', JSON.stringify(userDetails))
         }
     </script>
 </body>
