--- a/class.html
+++ b/class.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+<style>
+    h1 {
+        text-align: center;
+    }
+</style>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel=“shortcut icon” href=“[location of your favicon]” type=“image/x-icon”/>
+
 </head>
 
 <body>
 
 </body>
-<script src="class.js
-"></script>
+<script src="stack.js"></script>
 
 </html>
