--- a/asyn.html
+++ b/asyn.html
@@ -1,23 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-    h1 {
-        text-align: center;
-    }
-</style>
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel=“shortcut icon” href=“[location of your favicon]” type=“image/x-icon”/>
-
 </head>
 
 <body>
 
 </body>
-<script src="call.js"></script>
+<script src="asyn.js"></script>
 
 </html>
