--- a/queue.html
+++ b/queue.html
@@ -1,10 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<style>
-    h1 {
-        text-align: center;
-    }
-</style>
 
 <head>
     <meta charset="UTF-8">
@@ -12,12 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel=“shortcut icon” href=“[location of your favicon]” type=“image/x-icon”/>
-
 </head>
 
 <body>
 
 </body>
-<script src="call.js"></script>
+<script src="queue.js"></script>
 
 </html>
