--- a/demo/trialfirst.html
+++ b/demo/trialfirst.html
@@ -61,6 +61,36 @@
                 //     showNewUserOnScreen(userDetailsObj)
                 // }
         })
+
+        function showNewUserOnScreen(user) {
+            user = {
+                _id: '',
+                name: '',
+                email: '',
+
+            }
+            document.getElementById('email').value = '';
+            document.getElementById('username').value = '';
+            document.getElementById('phonenumber').value = '';
+            if (localStorage.getItem(user.email) != null) {
+                removeUsersFromScreen(user.email)
+            }
+            const parentNode = document.getElementById('listOfUsers');
+            const childHTML = < li id = $ {
+                    user.id
+                } > $ {
+                    user.name
+                } - $ {
+                    user.email
+                } >
+                <
+                button onclick = deleteUser('${user._id}') > deleteUser >
+                <
+                button onclick = editUserDetails('${user._id}', '${user._name}' >
+                    <
+                    /li>
+                    parentNode.innerHTML = parentNode.innerHTML + childHTML;
+                }
     </script>
 </body>
 
